kubernetes-tutorial/ingress-tutorial/ingress-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-internal-service
spec:
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 8080 # must match the servicePort from the ingress config.
    targetPort: 8080
